[project]
name = "gatana"
version = "0.1.0"
description = "A toolkit for building LangChain applications"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Gatana", email = "engineering@gatana.ai" },
]
requires-python = ">=3.10"
keywords = ["langchain", "llm", "ai", "agents", "gatana"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "langchain-core>=0.3",
]

[project.urls]
Homepage = "https://github.com/gatana-ai/gatana-langchain-sandbox"
Repository = "https://github.com/gatana-ai/gatana-langchain-sandbox"
Issues = "https://github.com/gatana-ai/gatana-langchain-sandbox/issues"
Changelog = "https://github.com/gatana-ai/gatana-langchain-sandbox/blob/main/CHANGELOG.md"

[project.optional-dependencies]
openai = ["langchain-openai>=0.3"]
anthropic = ["langchain-anthropic>=0.3"]

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "type" },
]
lint = ["ruff>=0.9", "pre-commit>=4"]
test = ["pytest>=8", "pytest-cov>=6", "pytest-asyncio>=0.24"]
type = ["mypy>=1.14"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["gatana"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"

[tool.coverage.run]
source = ["gatana"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
