[project]
name = "gatana-langchain-workspace"
version = "0.0.0"
description = "Workspace root for gatana-langchain packages"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "type" },
]
lint = ["ruff>=0.9", "pre-commit>=4"]
test = ["pytest>=8", "pytest-cov>=6", "pytest-asyncio>=0.24"]
type = ["mypy>=1.14"]

[tool.uv.workspace]
members = ["packages/*"]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["packages/gatana-langchain"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["gatana_langchain", "gatana_client"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"

[tool.coverage.run]
source = ["gatana_langchain"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
